--- a/templates/default/voipaccount/voipaccountbillinglist.html
+++ b/templates/default/voipaccount/voipaccountbillinglist.html
@@ -134,7 +134,7 @@
 						customOnChange="CustomerChanged($(this).val());"
 					}
 
-					<span>{trans("Voip account")}</span>
+					<span>{trans("VoIP account")}</span>
 					{include file="voipaccount/voipaccounts.html" form="choosefilter"}
 
 					<span class="lms-ui-date-period-container">
