--- a/templates/default/voipaccount/voipaccounteditbox.html
+++ b/templates/default/voipaccount/voipaccounteditbox.html
@@ -63,7 +63,7 @@
                     {trans("Login:")}
                 </td>
                 <td>
-                    <input type="text" name="voipaccountedit[login]" value="{$voipaccountinfo.login}" maxlength="32" size="30" {tip text="Enter voip account login" trigger="login" bold=1}>
+                    <input type="text" name="voipaccountedit[login]" value="{$voipaccountinfo.login}" maxlength="32" size="30" {tip text="Enter VoIP account login" trigger="login" bold=1}>
                     ({$voipaccountinfo.id|string_format:"%04d"})
                 </td>
             </tr>
