--- a/templates/default/voipaccount/voipaccountsearch.html
+++ b/templates/default/voipaccount/voipaccountsearch.html
@@ -3,7 +3,7 @@
 {block name=module_content}
 <!--// $Id$ //-->
 <script type="text/javascript">
-<!-- 
+<!--
     function PrintList()
     {
         document.voipaccountsearch.action = "?m=voipaccountsearch&search=1&print=1";
@@ -31,7 +31,7 @@
         <thead>
             <tr>
                 <td class="bold" colspan="2">
-                    {trans("Find voip accounts matching the following search criteria:")}
+                    {trans("Find VoIP accounts matching the following search criteria:")}
                 </td>
             </tr>
         </thead>
