--- a/templates/default/voipaccount/voipaccountlist.html
+++ b/templates/default/voipaccount/voipaccountlist.html
@@ -129,7 +129,7 @@
         {block name="voipaccountlist-list-empty-row"}
         <tr>
             <td class="empty-table" colspan="{$number_of_table_columns}">
-                {trans("No such voip accounts in database.")}
+                {trans("No such VoIP accounts in database.")}
             </td>
         </tr>
         {/block}
