--- a/templates/default/voipaccount/voipaccountsearchresults.html
+++ b/templates/default/voipaccount/voipaccountsearchresults.html
@@ -88,7 +88,7 @@
         {sectionelse}
         <tr>
             <td class="empty-table" colspan="5">
-                {trans("No such voip accounts matching search criteria.")}
+                {trans("No such VoIP accounts matching search criteria.")}
             </td>
         </tr>
         {/section}
