improvement: 'phpui.show_due_balance' (with 'false' as default value) enables presentation of due/expired balance in customer info box (cleanups - LMS #2283)

--- a/templates/default/customer/customerinfobox.html
+++ b/templates/default/customer/customerinfobox.html
@@ -554,7 +554,7 @@
 												{/if}
 											</td>
 										</tr>
-										{if ConfigHelper::checkConfig('phpui.show_due_balance', ConfigHelper::checkConfig('phpui.show_expired_balance'))}
+										{if ConfigHelper::checkConfig('phpui.show_customer_due_balance', ConfigHelper::checkConfig('phpui.show_customer_expired_balance'))}
 											<tr>
 												<td>
 													{icon name="money"}
@@ -565,7 +565,7 @@
 												<td>
 													{if $customerinfo.expiredbalance < 0}
 														<span class="lms-ui-alert">
-															{$customerinfo.balance|default:"0"|money_format}
+															{$customerinfo.expiredbalance|default:"0"|money_format}
 														</span>
 													{else}
 														{$customerinfo.expiredbalance|default:"0"|money_format}
