devel/cleanup: attach-documents => related-documents

--- a/templates/default/print/printindex.html
+++ b/templates/default/print/printindex.html
@@ -1138,9 +1138,9 @@
 									</td>
 									<td collspan="3">
 										<label>
-											<input type="checkbox" name="attach-documents" form="printinvoices">
+											<input type="checkbox" name="related-documents" form="printinvoices">
 											<strong>
-												{trans("attach documents")}
+												{trans("related documents")}
 											</strong>
 										</label>
 									</td>
