bugfix: fixed syntax error

--- a/templates/default/invoice/invoicereport.html
+++ b/templates/default/invoice/invoicereport.html
@@ -53,7 +53,7 @@
 		</TD>
 		{/if}
 	</TR>
-	{if !$printonlysummary)}
+	{if !$printonlysummary}
 	{cycle values="grey,white" print=false}
 	{foreach $invoicelist as $invoice}
 	<TR class="{cycle}">
