--- a/templates/default/rt/rtfilter.html
+++ b/templates/default/rt/rtfilter.html
@@ -24,7 +24,7 @@
             <input type="hidden" name="ts" value="all">
             <SELECT size="1" name="ts[]" OnChange="document.filter.submit();" multiple class="lms-ui-multiselect lms-ui-multiselect-filter" data-default-value="{trans("— all —")}">
                 {foreach $_SERVICETYPES as $key => $ts}
-                    <OPTION value="{$key}"{if is_array($filter.serviceids) && in_array($key, $filter.serviceids)} SELECTED{/if}>{$ts}</OPTION>
+                    <OPTION value="{$key}"{if isset($filter.serviceids) && is_array($filter.serviceids) && in_array($key, $filter.serviceids)} SELECTED{/if}>{$ts}</OPTION>
                 {/foreach}
             </SELECT>
             </label>
@@ -33,7 +33,7 @@
                 <input type="hidden" name="tt" value="all">
                 <SELECT size="1" name="tt[]" OnChange="document.filter.submit();" multiple class="lms-ui-multiselect lms-ui-multiselect-filter" data-default-value="{trans("— all —")}">
                 {foreach Localisation::arraySort($_RT_TYPES, 'label') as $key => $tt}
-                    <OPTION value="{$key}"{if is_array($filter.typeids) && in_array($key, $filter.typeids)} SELECTED{/if}>{$tt.label}</OPTION>
+                    <OPTION value="{$key}"{if isset($filter.typeids) && is_array($filter.typeids) && in_array($key, $filter.typeids)} SELECTED{/if}>{$tt.label}</OPTION>
                 {/foreach}
                 </SELECT>
             </label>
@@ -130,9 +130,9 @@
             <label class="nobr">
             {trans("<!rt>Removed")}
             <SELECT size="1" name="r" OnChange="document.filter.submit();">
-                <OPTION value=""{if $filter.removed == ""} SELECTED{/if}>{trans("— all —")}</OPTION>
-                <OPTION value="-1"{if $filter.removed == "-1"} SELECTED{/if}>{trans("No")}</OPTION>
-                <OPTION value="1"{if $filter.removed == "1"} SELECTED{/if}>{trans("Yes")}</OPTION>
+                <OPTION value=""{if !isset($filter.removed)} SELECTED{/if}>{trans("— all —")}</OPTION>
+                <OPTION value="-1"{if isset($filter.removed) && $filter.removed == "-1"} SELECTED{/if}>{trans("No")}</OPTION>
+                <OPTION value="1"{if isset($filter.removed) && $filter.removed == "1"} SELECTED{/if}>{trans("Yes")}</OPTION>
             </SELECT>
             </label>
             {/if}
@@ -187,7 +187,7 @@
                 <input type="hidden" name="pids" value="all">
                 <SELECT size="1" name="pids[]" OnChange="document.filter.submit();" multiple class="lms-ui-multiselect" data-default-value="{trans("No filter")}">
                 {foreach $projects as $project}
-                    <OPTION value="{$project.id}"{if is_array($filter.projectids) && in_array($project.id, $filter.projectids)} selected{/if}>{$project.name|truncate:40:"&hellip;":true}</OPTION>
+                    <OPTION value="{$project.id}"{if isset($filter.projectids) && is_array($filter.projectids) && in_array($project.id, $filter.projectids)} selected{/if}>{$project.name|truncate:40:"&hellip;":true}</OPTION>
                 {/foreach}
                 </SELECT>
             </label>
@@ -215,8 +215,8 @@
             <label class="nobr">
                 {trans("Watched tickets")}
                 <SELECT size="1" name="watching" onChange="document.filter.submit()">
-                    <option value="-1"{if $filter.watching == -1} selected{/if}>{trans("no")}</option>
-                    <option value="1"{if $filter.watching == 1} selected{/if}>{trans("yes")}</option>
+                    <option value="-1"{if isset($filter.watching) && $filter.watching == -1} selected{/if}>{trans("no")}</option>
+                    <option value="1"{if isset($filter.watching) && $filter.watching == 1} selected{/if}>{trans("yes")}</option>
                 </SELECT>
             </label>
         </FORM>
