--- a/templates/default/customer/customerdocuments.html
+++ b/templates/default/customer/customerdocuments.html
@@ -136,16 +136,18 @@
 						{if ($docrights.$type.rights & $smarty.const.DOCRIGHT_EDIT)}
 							{button type="link" icon="edit" href="?m=documentedit&id={$doc.docid}" tip="Edit"}
 						{/if}
-						{$docattach = $doc.attachments[0]}
-						{if $docattach.type == 1 || count($doc.attachments) == 1}
-							{documentview id="{$doc.docid}-{$docattach.id}" type=$docattach.contenttype name=$docattach.filename
-							url="?m=documentview&id={$doc.docid}" external=true
-							text="<i class=\"lms-ui-icon-view{if preg_match('/pdf/',$docattach.contenttype)} pdf{elseif preg_match('/csv|excel|spreadsheet/',$docattach.contenttype)} xls{/if}\"></i>"}
-						{/if}
-						{if count($doc.attachments) > 1 || !$docattach.type < 1}
-							<a href="#" id="allattachments-toggle-{$doc.docid}" onclick="toggle_all_attachments({$doc.docid}); return false;" title="{trans("more document attachments")}">
-								<img src="img/asc_order.gif">
-							</a>
+						{if is_array($doc.attachments)}
+							{$docattach = $doc.attachments[0]}
+							{if $docattach.type == 1 || count($doc.attachments) == 1}
+								{documentview id="{$doc.docid}-{$docattach.id}" type=$docattach.contenttype name=$docattach.filename
+								url="?m=documentview&id={$doc.docid}" external=true
+								text="<i class=\"lms-ui-icon-view{if preg_match('/pdf/',$docattach.contenttype)} pdf{elseif preg_match('/csv|excel|spreadsheet/',$docattach.contenttype)} xls{/if}\"></i>"}
+							{/if}
+							{if count($doc.attachments) > 1 || !$docattach.type < 1}
+								<a href="#" id="allattachments-toggle-{$doc.docid}" onclick="toggle_all_attachments({$doc.docid}); return false;" title="{trans("more document attachments")}">
+									<img src="img/asc_order.gif">
+								</a>
+							{/if}
 						{/if}
 						<INPUT TYPE="checkbox" NAME="marks[{$doc.docid}]" form="customerdocuments-form" class="lms-ui-multi-check" VALUE="{$doc.docid}">
 					</div>
