improvement: e-mail addresses using more readable font

--- a/css/style.less
+++ b/css/style.less
@@ -556,7 +556,12 @@ A {
 			text-decoration: none;
 		}
 	}
+
+    &[href^="mailto:"] {
+      font-family: 'Fira Code', monospace;
+    }
 }
+
 TR,.lms-ui-tab-table-row {
 	&.blend A {
 		color: @blend;
