--- a/templates/default/header.html
+++ b/templates/default/header.html
@@ -9,6 +9,9 @@
 	{include file="jquery.html" language=Localisation::getCurrentHtmlLanguage() lms_language=Localisation::getCurrentUiLanguage()}
 	<link href="{ConfigHelper::getConfig('phpui.style', 'css/style.css')}" rel="stylesheet" type="text/css">
 	<link href="css/map.css" rel="stylesheet" type="text/css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Fira+Code&display=swap" rel="stylesheet">
 	{block name="extra-css-styles"}{/block}
 	<link href="img/lms-net.gif" rel="shortcut icon">
 	<script src="js/common.js"></script>
