devel/refactoring: all event type properties in single structrure/associative array - it'll ease some implementation of some new features in future

--- a/templates/default/event/eventinfo.html
+++ b/templates/default/event/eventinfo.html
@@ -82,7 +82,7 @@
 					<strong>{trans("Type")}</strong>
 				</td>
 				<td class="nobr">
-					{$_EVENTTYPES[$event.type]}
+					{$_EVENTTYPES[$event.type].label}
 				</td>
 			</tr>
 			<tr>
