--- a/templates/default/event/eventinfoshort.html
+++ b/templates/default/event/eventinfoshort.html
@@ -83,7 +83,7 @@
             {trans("Type")}
         </TD>
         <TD class="nobr">
-            {$_EVENTTYPES[$event.type]}
+            {$_EVENTTYPES[$event.type].label}
         </TD>
     </TR>
     <TR>
