--- a/templates/default/event/eventmodify.html
+++ b/templates/default/event/eventmodify.html
@@ -71,11 +71,13 @@
 					{/box_row}
 
 					{box_row icon="type" label="Type:" icon_class="fa-fw"}
-						<SELECT name="event[type]" size="1">
-							{foreach from=$_EVENTTYPES key=key item=type}
-								<OPTION value="{$key}" {if $key == $event.type || (!$event.type && $key == $smarty.const.EVENT_OTHER)}SELECTED{/if}>{$type}</OPTION>
+						<select name="event[type]" size="1">
+							{foreach $_EVENTTYPES as $idx => $eventtype}
+								<option value="{$idx}"
+									{if $idx == $event.type || (!$event.type && $idx == $smarty.const.EVENT_OTHER)} selected{/if}
+									>{$eventtype.label}</option>
 							{/foreach}
-						</SELECT>
+						</select>
 					{/box_row}
 
 					{box_row icon="customer" label="Customer:" icon_class="fa-fw"}
