--- a/templates/default/customer/customerevents.html
+++ b/templates/default/customer/customerevents.html
@@ -73,8 +73,8 @@
 			{section name=eventlist loop=$eventlist max=$limit}
 			{$event=$eventlist[eventlist]}
 				<div class="lms-ui-tab-table-row{if $event.closed} blend{/if}" data-target-url="?m=eventinfo&id={$event.id}">
-					<div class="lms-ui-tab-table-column type" style="{if !$event.closed}{if isset($_EVENTSTYLES[$event.type])} {$_EVENTSTYLES[$event.type]}{/if}{/if}">
-						{$_EVENTTYPES[$event.type]}
+					<div class="lms-ui-tab-table-column type" style="{if !$event.closed}{if isset($_EVENTTYPES[$event.type])} {$_EVENTTYPES[$event.type].style}{/if}{/if}">
+						{$_EVENTTYPES[$event.type].label}
 						{if $event.ticketid}
 							<br><A href="?m=rtticketview&id={$event.ticketid}">#{$event.ticketid}</A>
 						{/if}
