--- a/templates/default/event/eventlistboxrow.html
+++ b/templates/default/event/eventlistboxrow.html
@@ -2,15 +2,15 @@
 <TR class="highlight event-single{if $event.closed} blend{/if}{if $event.wholeday} event-whole-day{/if}{if $event.multiday} event-multi-day{/if}"
     data-event-id="{$event.id}"
     data-popup-menu-title="{t a=$event.id|string_format:"#%06d"}Event $a{/t}">
-	<td style="min-width: 90px; {if isset($_EVENTSTYLES[$event.type])} {$_EVENTSTYLES[$event.type]}{/if}" class="text-center bold {if !$event.closed || ($event.closed && ($smarty.now - $event.closeddate < ConfigHelper::getConfig('timetable.allow_modify_closed_events_newer_than', ConfigHelper::getConfig('phpui.allow_modify_closed_events_newer_than', 604800)))) || ConfigHelper::checkPrivilege('superuser')}event-single-sortable-handler{/if}">
-        {$_EVENTTYPES[$event.type]}
-            {if $_EVENTTYPES[$event.type]}
+	<td style="min-width: 90px; {if isset($_EVENTTYPES[$event.type])} {$_EVENTTYPES[$event.type].style}{/if}" class="text-center bold {if !$event.closed || ($event.closed && ($smarty.now - $event.closeddate < ConfigHelper::getConfig('timetable.allow_modify_closed_events_newer_than', ConfigHelper::getConfig('phpui.allow_modify_closed_events_newer_than', 604800)))) || ConfigHelper::checkPrivilege('superuser')}event-single-sortable-handler{/if}">
+        {$_EVENTTYPES[$event.type].label}
+        {if isset($_EVENTTYPES[$event.type])}
             <br>
         {/if}
         {if $event.ticketid}
             {hint mode="toggle" url="?m=rtticketinfo&id={$event.ticketid}" icon="info"
-                class="event-info-short-button fa-xs" style="{if isset($_EVENTSTYLES[$event.type])}{$_EVENTSTYLES[$event.type]}{/if}"}
-            <a href="?m=rtticketview&id={$event.ticketid}" style="{if isset($_EVENTSTYLES[$event.type])}{$_EVENTSTYLES[$event.type]}{/if}">
+                class="event-info-short-button fa-xs" style="{if isset($_EVENTTYPES[$event.type])}{$_EVENTTYPES[$event.type].style}{/if}"}
+            <a href="?m=rtticketview&id={$event.ticketid}" style="{if isset($_EVENTTYPES[$event.type])}{$_EVENTTYPES[$event.type].style}{/if}">
                 #{$event.ticketid}
             </a>
         {/if}
