bugfix: dont's show empty brackets when number info is empty

--- a/templates/default/voipaccount/voipaccountinfobox.html
+++ b/templates/default/voipaccount/voipaccountinfobox.html
@@ -87,7 +87,7 @@
                                                 {else}
                                                     {$number.phone}
                                                 {/if}
-                                                {if isset($number.info)}
+                                                {if isset($number.info) && strlen($number.info)}
                                                     &nbsp;({$number.info|escape})
                                                 {/if}
                                             {/strip}
