Added extra status filters

--- a/templates/default/customer/customerlist.html
+++ b/templates/default/customer/customerlist.html
@@ -158,6 +158,8 @@
 						<OPTION VALUE="52"{if $filter.state == 52} SELECTED{/if}>{trans("in debt")}</OPTION>
 						<OPTION VALUE="57"{if $filter.state == 57} SELECTED{/if}>{trans("in debt above 100%")}</OPTION>
 						<OPTION VALUE="58"{if $filter.state == 58} SELECTED{/if}>{trans("in debt above 200%")}</OPTION>
+						<OPTION VALUE="82"{if $filter.state == 82} SELECTED{/if}>{trans("in debt above or equal 100%")}</OPTION>
+						<OPTION VALUE="83"{if $filter.state == 83} SELECTED{/if}>{trans("in debt above or equal 200%")}</OPTION>
 						<option value="71"{if $filter.state == 71} selected{/if}>{trans("overdue receivables")}</option>
 					{/if}
 					<OPTION VALUE="55"{if $filter.state == 55} SELECTED{/if}>{trans("without tariff")}</OPTION>
