--- a/templates/default/customer/customersearch.html
+++ b/templates/default/customer/customersearch.html
@@ -561,6 +561,8 @@
 					<OPTION VALUE="52">{trans("in debt")}</OPTION>
 					<OPTION VALUE="57">{trans("in debt above 100%")}</OPTION>
 					<OPTION VALUE="58">{trans("in debt above 200%")}</OPTION>
+					<OPTION VALUE="82">{trans("in debt above or equal 100%")}</OPTION>
+					<OPTION VALUE="83">{trans("in debt above or equal 200%")}</OPTION>
 					<option value="71">{trans("overdue receivables")}</option>
 				{/if}
 				<OPTION VALUE="55">{trans("without tariff")}</OPTION>
