--- a/templates/default/voipaccount/voipaccounteditbox.html
+++ b/templates/default/voipaccount/voipaccounteditbox.html
@@ -246,13 +246,25 @@
                                                 {trans("Settings:")}
                                             </td>
                                             <td>
-                                                <input id="admin_record" type="checkbox" name="voipaccountedit[admin_record_flag]" value="yes"
-                                                {if $voipaccountinfo.flags & CALL_FLAG_ADMIN_RECORDING}checked{/if}>
-                                                <label for="admin_record">{trans("recording for operator")}</label><br>
+                                                <label>
+                                                    <input type="checkbox" name="voipaccountedit[{$smarty.const.VOIP_ACCOUNT_FLAG_ADMIN_RECORDING}]" value="yes"
+                                                        {if $voipaccountinfo.flags & $smarty.const.VOIP_ACCOUNT_FLAG_ADMIN_RECORDING} checked{/if}>
+                                                    {trans("recording for operator")}
+                                                </label>
+                                                <br>
 
-                                                <input id="customer_record"	type="checkbox" name="voipaccountedit[customer_record_flag]" value="yes"
-                                                {if $voipaccountinfo.flags & CALL_FLAG_CUSTOMER_RECORDING}checked{/if}>
-                                                <label for="customer_record">{trans("recording for customer")}</label>
+                                                <label>
+                                                    <input type="checkbox" name="voipaccountedit[{$smarty.const.VOIP_ACCOUNT_FLAG_CUSTOMER_RECORDING}]" value="yes"
+                                                        {if $voipaccountinfo.flags & $smarty.const.VOIP_ACCOUNT_FLAG_CUSTOMER_RECORDING} checked{/if}>
+                                                    {trans("recording for customer")}
+                                                </label>
+                                                <br>
+
+                                                <label>
+                                                    <input type="checkbox" name="voipaccountedit[{$smarty.const.VOIP_ACCOUNT_FLAG_TRUNK}]" value="yes"
+                                                        {if $voipaccountinfo.flags & $smarty.const.VOIP_ACCOUNT_FLAG_TRUNK} checked{/if}>
+                                                    {trans("<!voip-account>trunk")}
+                                                </label>
                                             </td>
                                         </tr>
                                         {/block}
